# TaskManager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: ControllableInterface.h  InputParser.h  Menu.h  SampleJobs.h  Task.h  TaskManager.h
src/: Menu.cpp  SampleJobs.cpp  Task.cpp  TaskManager.cpp
